[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghas-code-scanning-toolkit"
version = "0.1.0"
description = "GitHub REST API wrapper and utilities for Code Scanning alert management."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jordan Suber" }
]
keywords = ["github", "ghas", "code-scanning", "security", "devsecops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = [
  "requests>=2.31.0,<3",
  "typing-extensions>=4.8.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "types-requests>=2.31.0.20240106",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Notoriousjayy/ghas-code-scanning-toolkit"
Repository = "https://github.com/Notoriousjayy/ghas-code-scanning-toolkit"
Issues = "https://github.com/Notoriousjayy/ghas-code-scanning-toolkit/issues"

# --- src/ layout wiring (critical) ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["gh_code_scanning*"]

# If you have package data later (templates, schemas, etc.), enable/include here.
[tool.setuptools.package-data]
gh_code_scanning = ["py.typed"]

# --- Tooling (optional but production-standard) ---
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # allow long lines when useful (tables/urls)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
strict_equality = true
packages = ["gh_code_scanning"]

[tool.coverage.run]
branch = true
source = ["gh_code_scanning"]

[tool.coverage.report]
show_missing = true
skip_covered = true
